src/templatemanager/base/chatWidgetComposeBar/chatWidgetComposeBar.scss
/* ... */
// END


// Typing Indicator
.typing-indicator-wraper{
    position: absolute;
    top: -30px;
    left: 16px;
    width: auto;
    min-width: 120px;
    display: none;
    align-items: center;
    gap: 20px;
    padding: 4px 0;
    background: var(--sdk-global-white-bg);
    z-index: 9;
    p{
        color: var(--sdk-gloabl-text-color);
        font-size: 12px;
        font-weight: 400;
        line-height: 20px;
        margin-right: 6px;
    }
    .dot-flashing {
        position: relative;
        width: 8px;
        height: 8px;
        border-radius: 5px;
        background-color: var(--sdk-global-theme-color);
        color: var(--sdk-global-theme-color);
        animation: dot-flashing 1s infinite linear alternate;
        animation-delay: 0.5s;
        &::before{
            content: "";
            display: inline-block;
            position: absolute;
            top: 0;
            left: -15px;
            width: 8px;
            height: 8px;
            border-radius: 5px;
            background-color: var(--sdk-global-theme-color);
            color: var(--sdk-global-theme-color);
            animation: dot-flashing 1s infinite alternate;
            animation-delay: 0s;
        }
        &::after{
            content: "";
            display: inline-block;
            position: absolute;
            top: 0;
            left: 15px;
            width: 8px;
            height: 8px;
            border-radius: 5px;
            background-color: var(--sdk-global-theme-color);
            color: var(--sdk-global-theme-color);
            animation: dot-flashing 1s infinite alternate;
            animation-delay: 1s;
        }
    }
}

// Powered By
.powerdby-info {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 6px 16px;
    background: var(--sdk-global-white-bg);
    height: 18px;
    p {
        font-weight: 500;
        font-size: 10px;
        line-height: 12px;
        color: var(--welecome-footer-text-color);
        margin-right: 5px;
        flex-shrink: 0;
    }
    figure {
        padding: 0 0 3px 0;
    }
    &.powerdby-hide {
        display: none;
    }
}

